# ChaNGa_test

./: .gitignore  ChaNGa.pm  Configure.pm  Makefile  Makefile.in  README.md  build.pl  build_bw.sh  build_driver.pl  build_single.pl  cleanup.pl  configure.ac  makePBSScripts.pl  makeParamFiles.pl  makeSymLinks.pl  processAccFiles.pl  processAccFiles.py  test.pl
BlueWaters/: .gitignore  ChaNGa.pm  Makefile  build.pl  build.sh  build_driver.pl  cleanup.pl  exportResults.sh  export_results.pl  fix_num_threads.pl  makePBSScripts.pl  makeParamFiles.pl  makeSymLinks.pl  plotForceTest.pl  plotGPUTimings.py  plotTimings.pl  plotTimings.py  processAccFiles.cpp  processAccFiles.pl  processTimings.pl  results.lyx  stuff.pl
BlueWaters/src/: update.sh
BlueWaters/src/CPU/: build.sh
BlueWaters/src/CPU-SMP/: build.sh
BlueWaters/src/GPU/: build.sh
BlueWaters/src/GPU-SMP/: build.sh
MPI/: Makefile.PL  Simple.mock.pm  Simple.mpi.pm  Simple.pm  Simple.xs
MPI/t/: test.pl
Set/: CrossProduct.pm
Stampede/: ChaNGa.pm  build.sh  exportResults.sh  init.sh  makeParamFiles.pl  makeSbatchScripts.pl
Stampede/buckettest/: ChaNGa.pm  cleanup.pl  init.sh  makeParamFiles.pl  makeSbatchScripts.pl
Stampede/forcetest/: ChaNGa.pm  cleanup.pl  exportResults.sh  makeParamFiles.pl  makeSbatchScripts.pl  makeSymlinks.pl  run.pl
benchmarking/: makeParamFiles.pl  plotting.py  processTimings.pl
lib/: parent.pm
lib/MPI/: Makefile.PL
lib/MPI/t/: test.pl
